force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/clofor_com_cfs__HSUInsurance__c.object-meta.xml
<CustomObject>
    <label>従業員保険</label>
    <nameField>
        <displayFormat>IN-{000000}</displayFormat>
        <label>H/S/UNEM INSURANCE ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>