force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__AmountPaidInsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AmountPaidInsurance__c</fullName>
    <label>AMOUNT PAID-INSURANCE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>