force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__BeneficiaryInsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BeneficiaryInsurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-INSURANCE</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BENEFICIARY_INSURANCE</relationshipName>
    <type>Lookup</type>
</CustomField>