force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__HealthInsuranceByEmployee__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HealthInsuranceByEmployee__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c*  clofor_com_cfs__PayrollSlip__r.clofor_com_cfs__EmployeeID__r.clofor_com_cfs__CloHRMStandard__r.clofor_com_cfs__HealthInsuranceRatioByEmployee__c</formula>
    <inlineHelpText>Health insurance by employee=Salary to contribute social insurance*health insurance ratio by employee in HR policy.</inlineHelpText>
    <label>HEALTH INSURANCE BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>