force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__HSUInsuranceBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HSUInsuranceBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>H/S/U INSURANCE BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>