force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__HSUInsuranceByEmployee__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HSUInsuranceByEmployee__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c *  clofor_com_cfs__PayrollSlip__r.clofor_com_cfs__EmployeeID__r.clofor_com_cfs__CloHRMStandard__r.clofor_com_cfs__HSUInsuranceRatioByEmployee__c</formula>
    <inlineHelpText>H/S/UNEM Insurance by Employee=Salary to Contribute Social Insurance*H/S/UNEM Insurance Ratio by Employee in HR Policy.</inlineHelpText>
    <label>H/S/UNEM INSURANCE BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>