force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c  *  clofor_com_cfs__PayrollSlip__r.clofor_com_cfs__EmployeeID__r.clofor_com_cfs__CloHRMStandard__r.clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c</formula>
    <inlineHelpText>H/S/UNEM Insurance by Employee/er=Salary to Contribute Social Insurance*H/S/UNEM Insurance Ratio by Employee/er in HR Policy.</inlineHelpText>
    <label>H/S/UNEM INSURANCE BY EMPLOYEE/ER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>