force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__InsuranceDebitAccuntingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InsuranceDebitAccuntingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INSURANCE DEBIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>INSURANCE_DEBIT</relationshipName>
    <type>Lookup</type>
</CustomField>