force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__InsurancePaid__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InsurancePaid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>INSURANCE PAID?</label>
    <type>Checkbox</type>
</CustomField>