force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__InsurancePaidDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__InsurancePaidDate__c</fullName>
    <label>INSURANCE PAID DATE</label>
    <type>Date</type>
</CustomField>