force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__PaymentTermInsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PaymentTermInsurance__c</fullName>
    <label>PAYMENT TERM-INSURANCE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>