force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__ResourceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RESOURCES ID</label>
    <referenceTo>clofor_com_cfs__resource__c</referenceTo>
    <relationshipName>H_S_U_INSURANCE</relationshipName>
    <type>Lookup</type>
</CustomField>