force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__SocialInsuranceByEmployer__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SocialInsuranceByEmployer__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c *   clofor_com_cfs__PayrollSlip__r.clofor_com_cfs__EmployeeID__r.clofor_com_cfs__CloHRMStandard__r.clofor_com_cfs__SocialInsuranceRatioByEmployer__c</formula>
    <inlineHelpText>Social insurance by employer=Salary to contribute social insurance*social insurance ratio by employer in HR policy.</inlineHelpText>
    <label>SOCIAL INSURANCE BY EMPLOYER</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>