force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__UnemployInsuByEmployerCreditAC__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnemployInsuByEmployerCreditAC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UNEMPLOYMENT INSU BY EMPLOYER CREDIT A/C</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipLabel>H/S/U INSURANCE (UNEMPLOYMENT INSU BY EMPLOYER CREDIT A/C)</relationshipLabel>
    <relationshipName>UnemployInsuByEmployer</relationshipName>
    <type>Lookup</type>
</CustomField>