force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__UnemploymentFundByEmployee__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnemploymentFundByEmployee__c</fullName>
    <formula>clofor_com_cfs__SalaryToContributeSocialInsurance__c*  clofor_com_cfs__PayrollSlip__r.clofor_com_cfs__EmployeeID__r.clofor_com_cfs__CloHRMStandard__r.clofor_com_cfs__UnemploymentFundRatioByEmployee__c</formula>
    <inlineHelpText>Unemployment fund by employee=Salary to contribute social insurance*unemployment fund ratio by employee in HR policy.</inlineHelpText>
    <label>UNEMPLOYMENT FUND BY EMPLOYEE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>