force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__UnpaidBalanceInsurance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceInsurance__c</fullName>
    <formula>clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c  -  clofor_com_cfs__AmountPaidInsurance__c</formula>
    <label>UNPAID BALANCE OF INSURANCE(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>