force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/fields/clofor_com_cfs__UserAccountName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UserAccountName__c</fullName>
    <formula>clofor_com_cfs__EmployeeID__r.clofor_com_cfs__UserAccountName__r.LastName</formula>
    <label>USER ACCOUNT NAME</label>
    <type>Text</type>
</CustomField>