force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__PayrollOrder__c</columns>
    <columns>clofor_com_cfs__PayrollSlip__c</columns>
    <columns>clofor_com_cfs__PayPeriodStartDate__c</columns>
    <columns>clofor_com_cfs__PayPeriodEndDate__c</columns>
    <columns>clofor_com_cfs__SalaryToContributeSocialInsurance__c</columns>
    <columns>clofor_com_cfs__HSUInsuranceByEmployee__c</columns>
    <columns>clofor_com_cfs__HSUInsuranceByEmployer__c</columns>
    <columns>clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>