force-app/main/default/objects/clofor_com_cfs__HSUInsurance__c/listViews/clofor_com_cfs__HSUInsurancePaymentProcessing.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__HSUInsurancePaymentProcessing</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EmployeeID__c</columns>
    <columns>clofor_com_cfs__PayrollOrder__c</columns>
    <columns>clofor_com_cfs__PayrollSlip__c</columns>
    <columns>clofor_com_cfs__InsurancePaid__c</columns>
    <columns>clofor_com_cfs__InsurancePaidDate__c</columns>
    <columns>clofor_com_cfs__HSUInsuranceByEmployee__c</columns>
    <columns>clofor_com_cfs__HSUInsuranceByEmployer__c</columns>
    <columns>clofor_com_cfs__HSUInsuranceRatioByEmployee_r__c</columns>
    <columns>clofor_com_cfs__PayPeriodStartDate__c</columns>
    <columns>clofor_com_cfs__PayPeriodEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__InsurancePaid__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>H/S/UNEM INSURANCE PAYMENT PROCESSING</label>
    <language>en_US</language>
</ListView>